--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "com.tommie_en_wout.random_smash_character_generator",
   "appName": "Random Smash Generator",
   "bundledWebRuntime": false,
   "npmClient": "npm",
